Bug 506884 - Renaming undoes if I scroll the file out of view
Summary: Renaming undoes if I scroll the file out of view
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 458896 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-07-10 20:34 UTC by Fernando Marcelino Muniz
Modified: 2026-06-21 21:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando Marcelino Muniz 2025-07-10 20:34:54 UTC
STEPS TO REPRODUCE
1. Be in the middle of renaming a file.
2. Scroll up to check if you didn't forget to put another file in the folder.
3. Scroll back into the file you were renaming.

OBSERVED RESULT
The renaming is completely undone.

EXPECTED RESULT
Nothing should have happened.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.5-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i5-11300H @ 3.10GHz
Memory: 9 GB of RAM (8.1 GB usable)
Graphics Processor 1: NVIDIA GeForce GTX 1650
Graphics Processor 2: Intel® Iris® Xe Graphics
Manufacturer: LENOVO
Product Name: 82MG
System Version: IdeaPad Gaming 3 15IHU6
Comment 1 aristsakas 2025-12-26 14:41:45 UTC
*** Bug 458896 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2026-03-20 06:11:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1221
Comment 3 Méven 2026-03-23 10:11:07 UTC
Git commit 5e35194b00d84db6aea3370ee8bb0ad560428c62 by Méven Car, on behalf of Pan Zhang.
Committed on 23/03/2026 at 09:53.
Pushed by meven into branch 'master'.

kitemviews: Preserve inline rename when item scrolls out of view

Inline rename was canceled when the edited item scrolled out of view. Scrolling could both finish the edit and recycle the item widget, causing the typed name to be lost.

Keep the inline rename editor alive while the item is temporarily offscreen. Update the editor geometry on scroll, avoid recycling the widget while it is being edited, and suppress the temporary FocusOut triggered by hiding the editor.

If the user interacts with another item while the edited one is offscreen, finish the hidden edit first so normal selection behavior is preserved.

M  +19   -1    src/kitemviews/kitemlistview.cpp
M  +32   -11   src/kitemviews/kstandarditemlistwidget.cpp
M  +1    -0    src/kitemviews/kstandarditemlistwidget.h
M  +5    -0    src/kitemviews/private/kitemlistroleeditor.cpp
M  +1    -0    src/kitemviews/private/kitemlistroleeditor.h

https://invent.kde.org/system/dolphin/-/commit/5e35194b00d84db6aea3370ee8bb0ad560428c62
Comment 4 Bug Janitor Service 2026-06-21 21:13:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1338