kitemviews: Preserve inline rename when item scrolls out of view

Inline rename was canceled when the edited item scrolled out of view. Scrolling could both finish the edit and recycle the item widget, causing the typed name to be lost.

Keep the inline rename editor alive while the item is temporarily offscreen. Update the editor geometry on scroll, avoid recycling the widget while it is being edited, and suppress the temporary FocusOut triggered by hiding the editor.

If the user interacts with another item while the edited one is offscreen, finish the hidden edit first so normal selection behavior is preserved.

BUG: 506884